// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-document-type should handle moving non-existent document type 1`] = `
{
  "content": [
    {
      "text": "Error using move-document-type:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "Not Found",
    "status": 404,
    "detail": "The specified document type was not found",
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`move-document-type should handle moving to non-existent folder 1`] = `
{
  "content": [
    {
      "text": "Error using move-document-type:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "Container not found",
    "status": 404,
    "detail": "The specified container was not found",
    "operationStatus": "ContainerNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`move-document-type should move a document type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
